--- a/src/App.scss
+++ b/src/App.scss
@@ -9,8 +9,8 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  height: 160px;
+  padding: 15px;
   color: white;
 }
 
@@ -21,6 +21,7 @@
 .App-intro {
   color: black;
   font-size: large;
+  padding: 10px
 }
 
 @keyframes App-logo-spin {
