--- a/src/RandomText.scss
+++ b/src/RandomText.scss
@@ -75,7 +75,8 @@ body {
 
 .wrapper {
     position: absolute;
-    top: 50%;
+    //top: 55%;
+    padding: 20px;
     left: 50%;
     width: 90%;
     font-size: 0;
